# RasPico_SHIBAKI_Board

./: README.md
KiCad/: fp-info-cache  fp-lib-table  pico_shibaki.kicad_pcb  pico_shibaki.kicad_prl  pico_shibaki.kicad_pro  pico_shibaki.kicad_sch
KiCad/3D/: CONSMA001-G--3DModel-STEP-1.STEP  M-U77-A1118-X00X-REVG5.step  SKRPAB.STEP
firmware/hwtest/: CMakeLists.txt  hw.h  hwinit.c  hwtest.c  hwtest.h  main.c  rx.pio  rx_func.c  rx_func.h  ser_10b.pio  tbl_8b10b.c  tbl_8b10b.h  udp.c  udp.h
firmware/pattern_gen/: CMakeLists.txt  hwinit.c  main.c  ser_tx.pio
firmware/udp_test/: CMakeLists.txt  hwinit.c  main.c  udp.c  udp.h
firmware/vban/: CMakeLists.txt  hw.h  hwinit.c  hwinit.h  main.c  ser_100base_fx.pio  udp.c  udp.h  vban.c  vban.h
firmware/vban/doc/: ADC_PreAmp.asc
